text-align added to fix issue with centered text

--- a/src/core/less/base.less
+++ b/src/core/less/base.less
@@ -340,6 +340,7 @@
         box-sizing: content-box;
         background-color: transparent;
         border: none;
+        text-align: inherit;
         .no-touch & {
             &:hover {
                 background-color: transparent;
